--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -262,6 +262,7 @@ item.vampirism.purified_garlic.name=Purified Garlic
 item.vampirism.garlic_beacon_core.name=Garlic Diffusor Core
 item.vampirism.garlic_beacon_core_improved.name=Improved Garlic Diffusor Core
 item.vampirism.pure_salt.name=Pure Salt
+item.vampirism.heart_seeker.name=Heartseeker
 
 #KEYS
 keys.vampirism.select_skills=Select Skills
@@ -446,6 +447,8 @@ text.vampirism.poisonous_to_vampires=Poisonous to vampires
 text.vampirism.deals_more_damage_to=Deals %s percent more damage against
 text.vampirism.liquid_container=Any liquid container
 text.vampirism.translators=None
+text.vampirism.sword_charged=Charged:
+text.vampirism.sword_trained=Trained:
 
 #MINION COMMANDS
 minioncommand.vampirism.attackhostilenoplayers=Attack hostile
