--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -325,6 +325,8 @@ gui.vampirism.reset_skills.desc=If you reset your skills you will loose one leve
 gui.vampirism.reset_skills.desc_test=Do you want to reset your skills? (You do not loose a level, because you are using an alpha version of Vampirism)
 gui.vampirism.alchemical_cauldron.level=Required Hunter Level: %s
 gui.vampirism.alchemical_cauldron.skill=Required Skill: %s
+gui.vampirism.name_sword.title=Sword Name
+gui.vampirism.name_sword.text=Do you want to give this sword a name?
 
 #COMMANDS
 command.vampirism.base.level.faction_not_found=Did not find faction %s
