--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -266,6 +266,7 @@ item.vampirism.garlic_beacon_core.name=Garlic Diffusor Core
 item.vampirism.garlic_beacon_core_improved.name=Improved Garlic Diffusor Core
 item.vampirism.pure_salt.name=Pure Salt
 item.vampirism.heart_seeker.name=Heartseeker
+item.vampirism.heart_striker.name=Heartstriker
 
 #KEYS
 keys.vampirism.select_skills=Select Skills
