--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -267,8 +267,8 @@ item.vampirism.garlic_beacon_core_improved.name=Improved Garlic Diffusor Core
 item.vampirism.pure_salt.name=Pure Salt
 item.vampirism.heart_seeker.name=Heartseeker
 item.vampirism.heart_striker.name=Heartstriker
-item.vampirism.blood_infused_iron_ingot.name=Blood infused Iron Ingot
-item.vampirism.blood_infused_enhanced_iron_ingot.name=Enhanced Blood infused Iron Ingot
+item.vampirism.blood_infused_iron_ingot.name=Blood Infused Iron Ingot
+item.vampirism.blood_infused_enhanced_iron_ingot.name=Enhanced Blood Infused Iron Ingot
 
 #KEYS
 keys.vampirism.select_skills=Select Skills
