Add sword finisher skill

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -30,6 +30,8 @@ text.vampirism.skill.water_resistance=Water Resistance
 text.vampirism.skill.water_resistance.desc=Your body will not be weakened by water anymore
 text.vampirism.skill.blood_charge=Blood Charge
 text.vampirism.skill.blood_charge.desc=Charge your blood using tools on the go
+text.vampirism.skill.sword_finisher=Finisher
+text.vampirism.skill.sword_finisher.desc=Instantly kill any non vampire that has below %s percent of his max health using a vampire sword
 
 #HUNTER SKILLS
 text.vampirism.skill.ihunterplayer=Becoming an hunter
