Grinder and sieve should be finished now. Added guide book entry and recipes. Fixed some issues. Added graphical indication for active sieve.

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -322,6 +322,7 @@ effect.vampirism.garlic=Garlic
 
 #FLUIDS
 fluid.vampirism.vampirismblood=Blood
+fluid.vampirism.impure_vampirismblood=Impure blood
 
 #GUI
 gui.vampirism.hunter_weapon_table=Hunter Weapon Table
