--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -191,7 +191,7 @@ tile.vampirism.garlic_beacon.successfully_fueled=Successfully fueled
 tile.vampirism.garlic_beacon.tooltip1=Diffuses garlic particles.
 tile.vampirism.garlic_beacon.tooltip2=Affects a %s by %s chunk area.
 tile.vampirism.blood_pedestal.name=Blood Pedestal
-tile.vampirism.grinder.name=Blood Grinder
+tile.vampirism.blood_grinder.name=Blood Grinder
 tile.vampirism.blood_sieve.name=Blood Sieve
 
 #ITEMS
