--- a/src/main/resources/assets/vampirismguide/lang/en_US.lang
+++ b/src/main/resources/assets/vampirismguide/lang/en_US.lang
@@ -92,6 +92,8 @@ guide.vampirism.hunter.unhunter=Un-Hunter
 guide.vampirism.hunter.unhunter.text=If you decide to become a vampire, you have to get rid of the garlic in your blood. To do that craft yourself a %s and inject it.
 
 
+guide.vampirism.skills.bind_action=You can also bind up to two actions to keyboard keys. See controls and /vampirism bind-action.
+
 #Creatures
 guide.vampirism.entity.title=Creatures
 guide.vampirism.entity.general=General
