Avoid issues with holy water splash crafting by moving them to the brewing stand (will probably cause new problems). Same for holy salt water

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -260,7 +260,7 @@ item.vampirism.obsidian_armor.chest.name=Obsidian Chestplate of Hell
 item.vampirism.obsidian_armor.legs.name=Obsidian Leggings of Hell
 item.vampirism.obsidian_armor.feet.name=Obsidian Boots of Hell
 item.vampirism.holy_water_bottle.name=Holy Water
-item.vampirism.holy_water_bottle.splash.name=Splash Bottle of Holy Water
+item.vampirism.holy_water_splash_bottle.name=Splash Bottle of Holy Water
 item.vampirism.holy_salt.name=Blessed Salt
 item.vampirism.holy_salt_water.name=Blessed Salt Water
 item.vampirism.item_alchemical_fire.name=Alchemical Fire
