--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -275,6 +275,22 @@ item.vampirism.heart_striker.name=Heartstriker
 item.vampirism.blood_infused_iron_ingot.name=Blood Infused Iron Ingot
 item.vampirism.blood_infused_enhanced_iron_ingot.name=Enhanced Blood Infused Iron Ingot
 item.vampirism.soul_orb_vampire.name=Vampire Soul
+item.vampirism.vampire_cloak.white.name=Vampire Cloak
+item.vampirism.vampire_cloak.silver.name=Vampire Cloak
+item.vampirism.vampire_cloak.gray.name=Vampire Cloak
+item.vampirism.vampire_cloak.black.name=Vampire Cloak
+item.vampirism.vampire_cloak.brown.name=Vampire Cloak
+item.vampirism.vampire_cloak.red.name=Vampire Cloak
+item.vampirism.vampire_cloak.orange.name=Vampire Cloak
+item.vampirism.vampire_cloak.yellow.name=Vampire Cloak
+item.vampirism.vampire_cloak.lime.name=Vampire Cloak
+item.vampirism.vampire_cloak.green.name=Vampire Cloak
+item.vampirism.vampire_cloak.cyan.name=Vampire Cloak
+item.vampirism.vampire_cloak.lightBlue.name=Vampire Cloak
+item.vampirism.vampire_cloak.blue.name=Vampire Cloak
+item.vampirism.vampire_cloak.purple.name=Vampire Cloak
+item.vampirism.vampire_cloak.magenta.name=Vampire Cloak
+item.vampirism.vampire_cloak.pink.name=Vampire Cloak
 
 #KEYS
 keys.vampirism.select_skills=Select Skills
