--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -276,22 +276,11 @@ item.vampirism.heart_striker.name=Heartstriker
 item.vampirism.blood_infused_iron_ingot.name=Blood Infused Iron Ingot
 item.vampirism.blood_infused_enhanced_iron_ingot.name=Enhanced Blood Infused Iron Ingot
 item.vampirism.soul_orb_vampire.name=Vampire Soul
-item.vampirism.vampire_cloak.white.name=Vampire Cloak
-item.vampirism.vampire_cloak.silver.name=Vampire Cloak
-item.vampirism.vampire_cloak.gray.name=Vampire Cloak
-item.vampirism.vampire_cloak.black.name=Vampire Cloak
-item.vampirism.vampire_cloak.brown.name=Vampire Cloak
-item.vampirism.vampire_cloak.red.name=Vampire Cloak
-item.vampirism.vampire_cloak.orange.name=Vampire Cloak
-item.vampirism.vampire_cloak.yellow.name=Vampire Cloak
-item.vampirism.vampire_cloak.lime.name=Vampire Cloak
-item.vampirism.vampire_cloak.green.name=Vampire Cloak
-item.vampirism.vampire_cloak.cyan.name=Vampire Cloak
-item.vampirism.vampire_cloak.lightBlue.name=Vampire Cloak
-item.vampirism.vampire_cloak.blue.name=Vampire Cloak
-item.vampirism.vampire_cloak.purple.name=Vampire Cloak
-item.vampirism.vampire_cloak.magenta.name=Vampire Cloak
-item.vampirism.vampire_cloak.pink.name=Vampire Cloak
+item.vampirism.vampire_cloak.white_black.name=Vampire Cloak
+item.vampirism.vampire_cloak.black_white.name=Vampire Cloak
+item.vampirism.vampire_cloak.black_red.name=Vampire Cloak
+item.vampirism.vampire_cloak.black_blue.name=Vampire Cloak
+item.vampirism.vampire_cloak.red_black.name=Vampire Cloak
 
 #VILLAGE RELATED
 text.vampirism.hunter_villager.trade_successful=Thank you for hunting down those vampires
@@ -485,6 +474,7 @@ text.vampirism.item_tier.normal=Normal
 text.vampirism.item_tier.enhanced=Enhanced
 text.vampirism.item_tier.ultimate=Special
 text.vampirism.poisonous_to_vampires=Poisonous to vampires
+text.vampirism.poisonous_to_hunter=Poisonous to hunter
 text.vampirism.deals_more_damage_to=Deals %s percent more damage against
 text.vampirism.liquid_container=Any liquid container
 text.vampirism.translators=None
