Add description to sunscreen skill

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -36,6 +36,7 @@ text.vampirism.skill.half_invulnerable.desc=Action that temporarily blocks high 
 text.vampirism.skill.freeze.desc=Temporarily freeze all nearby creatures
 text.vampirism.skill.vampire_rage.desc=Action that gives you a speed and damage boost on cost of increased blood usage
 text.vampirism.skill.summon_bats.desc=Summon a lot of bats around you while in bat mode to distract enemies
+text.vampirism.skill.sunscreen.desc=Grants temporary immunity from direct sundamage. Has a long cooldown.
 
 #HUNTER SKILLS
 text.vampirism.skill.ihunterplayer=Becoming an hunter
