--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -385,6 +385,8 @@ command.vampirism.test.gen_debug.false=Disabled Worldgen Debug
 command.vampirism.base.bind_action.not_existing=The given action %s does not exist
 command.vampirism.base.bind_action.help=You can bind custom actions (e.g. bat mode) to the two available action keys (see keybindings). Use tab to see available actions.
 command.vampirism.base.bind_action.success=Successfully bound action %s to action key %s
+command.vampirism.base.levelup.nofaction=Player has to be in a faction to be able to level up
+command.vampirism.base.levelup.max=Player is already on the highest level
 
 #ENCHANMENTS
 enchantment.vampirism.arrow_frugality=Arrow Frugality
