--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -329,6 +329,12 @@ advancement.vampirism.extra_storage=Extra storage
 advancement.vampirism.extra_storage.desc=Get yourself a blood container for all that blood
 advancement.vampirism.ancient_knowledge=Ancient knowledge
 advancement.vampirism.ancient_knowledge.desc=Find a old vampire book
+advancement.vampirism.betrayal=Betrayal
+advancement.vampirism.betrayal.desc=Kill another hunter while being a hunter yourself
+advancement.vampirism.regicide=Regicide
+advancement.vampirism.regicide.desc=Defeat a vampire baron
+advancement.vampirism.blood_cult=Blood cult
+advancement.vampirism.blood_cult.desc=Perform an ritual at the Altar of Infusion
 
 
 #POTIONS
