Implement advanced bite. Closes #391

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -16,6 +16,8 @@ text.vampirism.skill.blood_vision=Blood vision
 text.vampirism.skill.blood_vision.desc=Allows you to see entities through walls in the dark. Toggle with key.
 text.vampirism.skill.poisonous_bite=Poisonous Teeth
 text.vampirism.skill.poisonous_bite.desc=Poisons the creatures you bite
+text.vampirism.skill.advanced_biter=Advanced biter
+text.vampirism.skill.advanced_biter.desc=Allows you to suck blood more efficiently and stop at the right moment. Also increases you bite damage.
 text.vampirism.skill.more_bite_damage=Hardened Teeth
 text.vampirism.skill.more_bite_damage.desc=Deal more damage when biting
 text.vampirism.skill.less_blood_thirst=Frugal vampire
