Add missing lang key

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -147,6 +147,8 @@ entity.vampirism.dracula.name=Dracula
 entity.vampirism.dead_mob.name=Dead mob
 entity.vampirism.portal_guard.name=Portal Guard
 entity.vampirism.converted_villager.name=Vampire Villager
+entity.vampirism.villager_vampire_faction.name=Vampire Expert
+entity.vampirism.villager_hunter_faction.name=Hunter Expert
 text.vampirism.entity_level=Level
 entity.Villager.vampirism.hunter_priest=Alchemical Priest
 entity.Villager.vampirism.vampire_expert=Vampire Expert
