--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -135,7 +135,7 @@ entity.vampirism.hunter_trainer.name=Vampire Hunter Trainer
 entity.vampirism.hunter_trainer_dummy.name=Undercover Hunter Trainer
 entity.vampirism.advanced_vampire.name=Advanced Vampire
 entity.vampirism.advanced_hunter.name=Advanced Hunter
-entity.vampirism.hunter_villager.name=Angry Villager
+entity.vampirism.villager_angry.name=Angry Villager
 entity.vampirism.vampire_hunter.name=Vampire Hunter
 entity.vampirism.vampire.name=Vampire
 entity.vampirism.ghost.name=Ghost
@@ -146,7 +146,7 @@ entity.vampirism.blinding_bat.name=Bat
 entity.vampirism.dracula.name=Dracula
 entity.vampirism.dead_mob.name=Dead mob
 entity.vampirism.portal_guard.name=Portal Guard
-entity.vampirism.converted_villager.name=Vampire Villager
+entity.vampirism.villager_converted.name=Vampire Villager
 entity.vampirism.villager_vampire_faction.name=Vampire Expert
 entity.vampirism.villager_hunter_faction.name=Hunter Expert
 text.vampirism.entity_level=Level
