Fix 411. Still not perfect, can unlock by becoming a hunter after killing one, but meh.

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -338,7 +338,7 @@ advancement.vampirism.extra_storage.desc=Get yourself a blood container for all 
 advancement.vampirism.ancient_knowledge=Ancient knowledge
 advancement.vampirism.ancient_knowledge.desc=Find a old vampire book
 advancement.vampirism.betrayal=Betrayal
-advancement.vampirism.betrayal.desc=Kill another hunter while being a hunter yourself
+advancement.vampirism.betrayal.desc=Kill a hunter after having become a hunter yourself
 advancement.vampirism.regicide=Regicide
 advancement.vampirism.regicide.desc=Defeat a vampire baron
 advancement.vampirism.blood_cult=Blood cult
