--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -48,7 +48,7 @@
   "advancement.vampirism.ancient_knowledge": "Ancient knowledge",
   "advancement.vampirism.ancient_knowledge.desc": "Find a old vampire book",
   "advancement.vampirism.betrayal": "Betrayal",
-  "advancement.vampirism.betrayal.desc": "Kill another hunter while being a hunter yourself",
+  "advancement.vampirism.betrayal.desc": "Kill a hunter after having become a hunter yourself",
   "advancement.vampirism.regicide": "Regicide",
   "advancement.vampirism.regicide.desc": "Defeat a vampire baron",
   "advancement.vampirism.blood_cult": "Blood cult",
