VampireBiome should work properly with mobs,features etc. commands

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -224,6 +224,8 @@
   "category.vampirism.gui": "GUI Configuration",
   "category.vampirism.gui.tooltip": "Configure display",
   "category.vampirism.worldgen": "World Generation",
+  "__comment": "biome",
+  "biome.vampirism.vampire_forest": "Vampire Forest",
   "__comment": "actions",
   "action.vampirism.bat": "Toggle Batmode",
   "action.vampirism.freeze": "Freeze",
@@ -534,8 +536,18 @@
   "command.vampirism.base.bind_action.help": "You can bind custom actions (e.g. bat mode) to the two available action keys (see keybindings). Use tab to see available actions.",
   "command.vampirism.test.gen_debug.true": "Enabled Worldgen Debug",
   "command.vampirism.test.gen_debug.false": "Disabled Worldgen Debug",
+  "command.vampirism.test.skill.alreadyenabled": "Skill is already enabled (%s)",
+  "command.vampirism.test.skill.parent": "Parent Skill must be enabled (%s)",
+  "command.vampirism.test.skill.parents": "Parent Skill must be enabled (%s or %s)",
+  "command.vampirism.test.skill.nopoints": "No skill points remaining",
+  "command.vampirism.test.skill.othernode": "The other skill is enabled",
+  "command.vampirism.test.skill.otherfaction": "Your faction doesn't permit this skill",
   "__comment": "commands_old",
   "command.vampirism.base.vampire_biome.parse_dist": "Failed to parse max distance. Using %s.",
+  "__comment": "entities",
+  "entity.vampirism.vampire_baron": "Vampire Baron",
+  "__comment": "entities_text",
+  "entity.vampirism.vampire_baron.level": " Level %s",
   "__comment": "old",
   "__comment": "entities",
   "entity.vampirism.hunter_trainer": "Vampire Hunter Trainer",
@@ -546,7 +558,6 @@
   "entity.vampirism.vampire_hunter": "Vampire Hunter",
   "entity.vampirism.vampire": "Vampire",
   "entity.vampirism.ghost": "Ghost",
-  "entity.vampirism.vampire_baron": "Vampire Baron",
   "entity.vampirism.vampire_minion_r": "Vampire Minion",
   "entity.vampirism.vampire_minion_s": "Vampire Minion",
   "entity.vampirism.blinding_bat": "Bat",
@@ -556,7 +567,6 @@
   "entity.vampirism.villager_converted": "Vampire Villager",
   "entity.vampirism.villager_vampire_faction": "Vampire Expert",
   "entity.vampirism.villager_hunter_faction": "Hunter Expert",
-  "text.vampirism.entity_level": "Level",
   "entity.Villager.vampirism.hunter_priest": "Alchemical Priest",
   "entity.Villager.vampirism.vampire_expert": "Vampire Expert",
   "entity.Villager.vampirism.hunter_expert": "Hunter Expert",
