--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -109,7 +109,6 @@
   "text.vampirism.hunters": "Hunter",
   "text.vampirism.level": "Level",
   "text.vampirism.lord": "Lord",
-  "text.vampirism.level_up": "Level Up",
   "text.vampirism.can_only_be_used_by": "This can only be used by %s players",
   "text.vampirism.can_only_be_used_by_level": "This can only be used by %s players of level %s or higher",
   "text.vampirism.med_chair_other_faction": "You cannot become a Hunter since you already are a %s",
@@ -137,10 +136,6 @@
   "death.attack.holy_water.player": "%2$s burned %1$s with holy water",
   "text.vampirism.skill.level_to_low": "Your vampire level is too low for that",
   "text.vampirism.skill.cooldown_not_over": "Please wait until the cooldown is over",
-  "text.vampirism.ritual_missing_times": "You are missing items for this ritual",
-  "text.vampirism.ritual_structure_wrong": "The structure is wrong for this ritual",
-  "text.vampirism.ritual_level_wrong": "You cannot use this altar at this level",
-  "text.vampirism.ritual_still_running": "The ritual is still running",
   "text.vampirism.not_enough_blood": "There is not enough blood in the altar",
   "text.vampirism.ritual_requirements_not_met": "Not all requirements for this ritual were met",
   "text.vampirism.ritual_no_vampire": "You need to be a vampire for this ritual",
@@ -192,7 +187,6 @@
   "text.vampirism.sword_trained": "Trained:",
   "text.vampirism.integrations_available.first": "There is an integrations mod for Vampirism that adds enhanced compatibility for the following installed mods:",
   "text.vampirism.integrations_available.second": "[\"Please consider downloading this mod for an improved experience [\",{\"text\":\"Download\",\"color\":\"green\",\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"Click this to go to the mod page\",\"color\":\"green\"}},\"clickEvent\":{\"action\":\"open_url\",\"value\":\"@download@\"}},\"]\"]",
-  "text.vampirism.basic_hunter.levelup": "I hope you have learned something",
   "text.vampirism.trainer_disabled": "I am not a hunter",
   "text.vampirism.trainer_disabled_hunter": "It is not safe enought to train you here. Please free the village.",
   "category.vampirism.balance": "Balance settings",
@@ -224,6 +218,34 @@
   "category.vampirism.gui": "GUI Configuration",
   "category.vampirism.gui.tooltip": "Configure display",
   "category.vampirism.worldgen": "World Generation",
+  "__comment": "interaction",
+  "text.vampirism.hunter_trainer.trainer_level_wrong": "This trainer cannot train you at your level",
+  "text.vampirism.alchemical_cauldron.other": "This cauldron belongs to %s. You should not use it.",
+  "text.vampirism.alchemical_cauldron.cannot_use": "You have not learned how to use this",
+  "text.vampirism.altar_infusion.ritual_missing_times": "You are missing items for this ritual",
+  "text.vampirism.altar_infusion.ritual_structure_wrong": "The structure is wrong for this ritual",
+  "text.vampirism.altar_infusion.ritual_level_wrong": "You cannot use this altar at this level",
+  "text.vampirism.altar_infusion.ritual_still_running": "The ritual is still running",
+  "text.vampirism.altar_infusion.ritual_night_only": "You can only perform this ritual at night",
+  "text.vampirism.weapon_table.cannot_use": "You have not learned how to use this",
+  "text.vampirism.blood_potion_table.cannot_use": "You have not learned how to use this",
+  "__comment": "container/tileentity/screen",
+  "tile.vampirism.blood_grinder": "Blood Grinder",
+  "tile.vampirism.alchemical_cauldron": "Alchemical Cauldron",
+  "tile.vampirism.altar_infusion": "Altar of Infusion",
+  "container.vampirism.hunter_weapon_table.name": "Weapon Table",
+  "container.hunter": "Hunter",
+  "container.hunter_table": "Hunter Table",
+  "container.huntertrainer": "Hunter Trainer",
+  "__comment": "container/tileentity/screen_text",
+  "container.vampirism.hunter_table.ritual_level_wrong": "You cannot use this altar at this level",
+  "container.vampirism.basic_hunter.levelup": "I hope you have learned something",
+  "tile.vampirism.alchemical_cauldron.display": "%s's %s",
+  "text.vampirism.level_up": "Level Up",
+  "text.vampirism.hunter_table.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
+  "text.vampirism.altar_infusion.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
+  "text.vampirism.hunter_trainer.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
+
   "__comment": "biome",
   "biome.vampirism.vampire_forest": "Vampire Forest",
   "__comment": "actions",
@@ -395,12 +417,7 @@
   "block.vampirism.tent": "Tent",
   "block.vampirism.tent.spawner": "Spawns Hunter",
   "block.vampirism.med_chair": "Injection Chair",
-  "block.vampirism.weapon_table.cannot_use": "You have not learned how to use this",
-  "block.vampirism.blood_potion_table.cannot_use": "You have not learned how to use this",
   "block.vampirism.alchemical_fire": "Alchemical Fire",
-  "block.vampirism.alchemical_cauldron.other": "This cauldron belongs to %s. You should not use it.",
-  "block.vampirism.alchemical_cauldron.display": "%s's %s",
-  "block.vampirism.alchemical_cauldron.cannot_use": "You have not learned how to use this",
   "block.vampirism.garlic_beacon.already_fueled": "Already fueled",
   "block.vampirism.garlic_beacon.successfully_fueled": "Successfully fueled",
   "block.vampirism.castle_block": "Castle Block",
@@ -570,9 +587,6 @@
   "entity.Villager.vampirism.hunter_priest": "Alchemical Priest",
   "entity.Villager.vampirism.vampire_expert": "Vampire Expert",
   "entity.Villager.vampirism.hunter_expert": "Hunter Expert",
-  "text.vampirism.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
-  "text.vampirism.ritual_night_only": "You can only perform this ritual at night",
-  "text.vampirism.trainer_level_wrong": "This trainer cannot train you at your level",
   "__comment": "minioncommands",
   "minioncommand.vampirism.attackhostilenoplayers": "Attack hostile",
   "minioncommand.vampirism.attackhostile": "Attack hostile including player",
